...

    func showNextQuestionOrResult() {
        if isLastQuestion() {
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            
            let result = QuizResultViewModel(
                title: "Этот раунд окончен!",
                text: messageResultAlert(),
                buttonText: "Сыграть ещё раз"
            )
            self.viewController?.showAlert(quiz: result)
        } else {
            questionFactory?.requestNextQuestion()
...
